Sun Jun 29 17:22:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_each, strio_readlines): IO#each and
	  IO#readlines do not affect $_.  [ruby-core:17277]

Sun Jun 29 17:19:59 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_readline, strio_each)
	  (strio_readlines): set lastline.  [ruby-core:17257]

Sun Jun 29 17:15:49 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/openssl/ossl.h: include winsock.h if USE_WINSOCK2 is not defined.
	  a patch from arton <artonx at yahoo.co.jp> in [ruby-dev:35078]

Sun Jun 29 17:09:48 2008  wanabe  <s.wanabe@gmail.com>

	* util.c (ruby_strtod): ruby_strtod don't allow a trailing
	  decimal point like "7.". [ruby-dev:34835] [ruby-dev:35009]

Sat Jun 28 19:23:40 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* class.c (clone_method): use rb_copy_node_scope.
	  fixed [ruby-list:45102]
	  fixed [ruby-core:17393]

Sat Jun 28 18:49:50 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* class.c: revert to r15855.

Fri Jun 20 18:25:18 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_buf_append): should infect.

Fri Jun 20 16:33:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (rb_ary_store, rb_ary_splice): not depend on unspecified
	  behavior at integer overflow.

	* string.c (str_buf_cat): ditto.

Wed Jun 18 22:24:46 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* array.c (ary_new, rb_ary_initialize, rb_ary_store,
	  rb_ary_aplice, rb_ary_times): integer overflows should be
	  checked. based on patches from Drew Yao <ayao at apple.com>
	  fixed CVE-2008-2726

	* string.c (rb_str_buf_append): fixed unsafe use of alloca,
	  which led memory corruption. based on a patch from Drew Yao
	  <ayao at apple.com> fixed CVE-2008-2726

	* sprintf.c (rb_str_format): backported from trunk.

	* intern.h: ditto.

Tue Jun 17 15:09:46 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): no need to expand root path which has no