@@ -1,3 +1,8 @@
+Sun Jun 29 17:24:43 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/rdoc/parsers/parse_rb.rb (RDoc#collect_first_comment): skip
+	  magic comment.
+
 Sun Jun 29 17:22:09 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/stringio/stringio.c (strio_each, strio_readlines): IO#each and
